--- a/.github/workflows/docker-multiarch.yml
+++ b/.github/workflows/docker-multiarch.yml
@@ -3,7 +3,7 @@ name: Build and Push Multi-Arch "poorman-aws-playground" Docker Image
 on:
   push:
     branches:
-      - main
+      - '**'  # Runs on every branch
 
 jobs:
   build:
@@ -19,26 +19,34 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Set repository variable
+        run: echo "REPO=lesposito87/poorman-aws-playground" >> $GITHUB_ENV
+
       - name: Get Latest Tag from Docker Hub & Increment
         id: tag
         run: |
-          REPO="lesposito87/poorman-aws-playground"
-          LATEST_TAG=$(curl -s "https://hub.docker.com/v2/repositories/$REPO/tags/?page_size=1" | jq -r '.results[0].name')
+          LATEST_TAG=$(curl -s "https://hub.docker.com/v2/repositories/$REPO/tags/?page_size=1" | jq -r '.results | map(select(.name | test("^[0-9]+\\.[0-9]+\\.[0-9]+$"))) | sort_by(.name | split(".") | map(tonumber)) | last | .name')
 
-          # If no tags exist, default to v0.0.0
+          # If no tags exist, default to 0.0.0
           if [[ "$LATEST_TAG" == "null" || -z "$LATEST_TAG" ]]; then
-            LATEST_TAG="v0.0.0"
+            LATEST_TAG="0.0.0"
           fi
 
-          # Extract major, minor, patch from vX.Y.Z
-          VERSION=$(echo "$LATEST_TAG" | sed 's/v//')
-          MAJOR=$(echo "$VERSION" | cut -d. -f1)
-          MINOR=$(echo "$VERSION" | cut -d. -f2)
-          PATCH=$(echo "$VERSION" | cut -d. -f3)
+          # Extract major, minor, patch from X.Y.Z
+          MAJOR=$(echo "$LATEST_TAG" | cut -d. -f1)
+          MINOR=$(echo "$LATEST_TAG" | cut -d. -f2)
+          PATCH=$(echo "$LATEST_TAG" | cut -d. -f3)
 
           # Increment patch version
-          NEW_TAG="v$MAJOR.$MINOR.$((PATCH + 1))"
+          NEW_TAG="$MAJOR.$MINOR.$((PATCH + 1))"
           echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
+
+          # Set tag based on branch
+          if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+            echo "TAGS=$REPO:$NEW_TAG,$REPO:latest" >> $GITHUB_ENV
+          else
+            echo "TAGS=$REPO:$NEW_TAG-edge" >> $GITHUB_ENV
+          fi
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -52,7 +60,5 @@ jobs:
           context: .
           file: ./Dockerfile 
           push: true
-          tags: |
-            lesposito87/poorman-aws-playground:latest
-            lesposito87/poorman-aws-playground:${{ env.NEW_TAG }}
+          tags: ${{ env.TAGS }}
           platforms: linux/amd64,linux/arm64
