--- a/.github/workflows/docker-multiarch.yml
+++ b/.github/workflows/docker-multiarch.yml
@@ -3,12 +3,19 @@ name: Build and Push Multi-Arch "poorman-aws-playground" Docker Image
 on:
   push:
     branches:
-      - '**'  # Runs on every branch
+      - '**'  # Runs on every branch when a push is made
+
+  pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
+    branches:
+      - '**'  # Runs on all branches when a PR is created, updated, or reopened
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -22,8 +29,17 @@ jobs:
       - name: Set repository variable
         run: echo "REPO=lesposito87/poorman-aws-playground" >> $GITHUB_ENV
 
+      # Dockerfile validation only for pull requests
+      - name: Validate Dockerfile
+        if: github.event_name == 'pull_request'
+        run: |
+          echo "Validating Dockerfile..."
+          docker build --no-cache -f Dockerfile .
+
+      # Get Latest Tag from Docker Hub & Increment (only for push events)
       - name: Get Latest Tag from Docker Hub & Increment
         id: tag
+        if: github.event_name == 'push'
         run: |
           # Get the latest tag from Docker Hub
           LATEST_TAG=$(curl -s "https://hub.docker.com/v2/repositories/$REPO/tags/?page_size=100" | jq -r '.results[] | select(.name | test("^[0-9]+\\.[0-9]+\\.[0-9]+$")) | .name' | sort -V | tail -n 1)
@@ -54,11 +70,14 @@ jobs:
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
+        if: github.event_name == 'push'
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      # Build and push multi-arch image only for push events
       - name: Build and push multi-arch image
+        if: github.event_name == 'push'
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -67,7 +86,7 @@ jobs:
           tags: ${{ env.TAGS }}
           platforms: linux/amd64,linux/arm64
 
-      # Remove all -edge tags once merged to main
+      # Remove all "-edge" tags once merged to main
       - name: Remove all "-edge" tags once merged to main
         if: github.ref == 'refs/heads/main'
         run: |
