--- a/.github/workflows/docker-multiarch.yml
+++ b/.github/workflows/docker-multiarch.yml
@@ -71,15 +71,20 @@ jobs:
             echo "BUILD_IMAGE=false" >> $GITHUB_ENV
           fi
 
+      # - name: Build and push multi-arch image
+      #   if: env.BUILD_IMAGE == 'true'
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     context: .
+      #     file: ./Dockerfile
+      #     push: true
+      #     tags: ${{ env.TAGS }}
+      #     platforms: linux/amd64,linux/arm64
+
       - name: Build and push multi-arch image
         if: env.BUILD_IMAGE == 'true'
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ env.TAGS }}
-          platforms: linux/amd64,linux/arm64
+        run: |
+          echo ${{ env.TAGS }}
 
       - name: Remove PR image tag on PR close (if not merged)
         if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == false
