--- a/.github/workflows/docker-multiarch.yml
+++ b/.github/workflows/docker-multiarch.yml
@@ -267,20 +267,15 @@ jobs:
             echo "BUILD_IMAGE=false" >> $GITHUB_ENV
           fi
 
-      # - name: Build and push multi-arch image
-      #   if: env.BUILD_IMAGE == 'true'
-      #   uses: docker/build-push-action@v5
-      #   with:
-      #     context: .
-      #     file: ./Dockerfile
-      #     push: true
-      #     tags: ${{ env.TAGS }}
-      #     platforms: linux/amd64,linux/arm64
-
       - name: Build and push multi-arch image
         if: env.BUILD_IMAGE == 'true'
-        run: |
-          echo ${{ env.TAGS }}
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ env.TAGS }}
+          platforms: linux/amd64,linux/arm64
 
       - name: Remove PR image tag on PR close
         if: github.event_name == 'pull_request' && github.event.action == 'closed'
