feat: using reusable workflow

--- a/.github/workflows/docker-multiarch-build.yml
+++ b/.github/workflows/docker-multiarch-build.yml
@@ -1,9 +1,23 @@
+name: Build and Push Multi-Arch "poorman-aws-playground" Docker Image
+on:
+  push:
+    branches:
+      - main
+
+  pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - closed
+    branches:
+      - '**'
+
 jobs:
   docker-multiarch-build:
-    uses: lesposito87/github-workflows/docker-multiarch-build.yml@v1.0.0
+    uses: lesposito87/github-workflows/.github/workflows/docker-multiarch-build.yml@v1.0.0
     with:
       docker_repo: lesposito87/poorman-aws-playground
     secrets:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-
